Bug #29570 original error lost in write_event on slave - quick fix for CGE 6.1